--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "learnspacerepeat",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.0",
   "dependencies": {
+    "firebase": "^6.4.0",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-firebase-hooks": "^2.1.0",
     "react-scripts": "3.1.1"
   },
   "scripts": {
